Add authentication for PostEvents WIP
